--- a/index.css
+++ b/index.css
@@ -1,23 +1,32 @@
-body, 
-html, 
+body,
+html,
 * {
-    font-size:  10px;
-    box-sizing: border-box;
-    margin : 0;
-    padding: 0;
+  font-size: 10px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: bbc4e8;
+}
+h1 {
+  font-size: 10rem;
+  text-align: center;
+  border-color: 6d72a2;
+  margin: 40rem auto;
+  background-color: 6d72a2;
+  border-radius: 400rem;
 }
 .card {
-    width: 30%;
-    height: 500px;
-    background-color: azure;
-    margin: 20px 0 auto;
-
+  width: 30%;
+  height: 400px;
+  background-color: eee4ea;
+  border-radius: 10px;
+  margin: 100px 0 auto;
 }
-.container{
-    width: 90vw;
-    background-color: black;
-    margin: 25px auto;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.container {
+  width: 90vw;
+  background-color: bbc4e8;
+  margin: 25px auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
