--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ html,
   margin: 0;
   padding: 0;
   background-color: bbc4e8;
+  font-family: "Epunda Slab", serif;
 }
 h1 {
   font-size: 10rem;
@@ -21,6 +22,21 @@ h1 {
   background-color: eee4ea;
   border-radius: 10px;
   margin: 100px 0 auto;
+}
+h2 {
+  font-size: 20px;
+  text-align: center;
+  background-color: eee4ea;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+. {
+  border-image: 10px;
+  font-size: 100%;
+  width: 300px;
+  height: 350px;
+  display: flex;
+  justify-content: center;
 }
 .container {
   width: 90vw;
