--- a/index.css
+++ b/index.css
@@ -13,30 +13,36 @@ h1 {
   text-align: center;
   border-color: 6d72a2;
   margin: 40rem auto;
-  background-color: 6d72a2;
-  border-radius: 400rem;
 }
 .card {
-  width: 30%;
-  height: 400px;
-  background-color: eee4ea;
+  width: 400px;
+  height: 700px;
+  background-color: #eee4ea;
   border-radius: 10px;
   margin: 100px 0 auto;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 h2 {
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
-  background-color: eee4ea;
+  background-color: #eee4ea;
   border-radius: 10px;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
-. {
+.card img {
+  border-radius: 8px;
   border-image: 10px;
-  font-size: 100%;
-  width: 300px;
-  height: 350px;
-  display: flex;
-  justify-content: center;
+  display: block;
+  margin: auto;
+  width: 400px;
+  height: auto;
+}
+h3 {
+  font-size: 20px;
+  background-color: #eee4ea;
+  text-align: center;
 }
 .container {
   width: 90vw;
