--- a/index.css
+++ b/index.css
@@ -5,20 +5,20 @@ html,
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: bbc4e8;
+  background-color: #d2c6c6;
   font-family: "Epunda Slab", serif;
 }
 h1 {
   font-size: 10rem;
   text-align: center;
-  border-color: 6d72a2;
+  border-color: #6d72a2;
   margin: 40rem auto;
 }
 .card {
   width: 400px;
-  height: 700px;
-  background-color: #eee4ea;
-  border-radius: 10px;
+  height: 750px;
+  background-color: #fffafa;
+  border-radius: 50px;
   margin: 100px 0 auto;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -26,29 +26,37 @@ h1 {
 h2 {
   font-size: 30px;
   text-align: center;
-  background-color: #eee4ea;
+  background-color: #fffafa;
   border-radius: 10px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 .card img {
-  border-radius: 8px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
   border-image: 10px;
-  display: block;
-  margin: auto;
   width: 400px;
   height: auto;
 }
 h3 {
   font-size: 20px;
-  background-color: #eee4ea;
+  background-color: #fffafa;
   text-align: center;
 }
 .container {
   width: 90vw;
-  background-color: bbc4e8;
+  background-color: #d2c6c6;
   margin: 25px auto;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+button {
+  text-align: center;
+  font-size: 20px;
+  border-radius: 5px;
+  background-color: #efd7d9;
+  border-color: #efd7d9;
+  margin:auto;
+  display:block;
 }
