--- a/index.css
+++ b/index.css
@@ -12,16 +12,17 @@ h1 {
   font-size: 10rem;
   text-align: center;
   border-color: #6d72a2;
-  margin: 40rem auto;
+  margin: 45rem auto;
 }
 .card {
   width: 400px;
   height: 750px;
   background-color: #fffafa;
-  border-radius: 50px;
+  border-radius: 5px;
   margin: 100px 0 auto;
   flex-wrap: wrap;
   justify-content: space-between;
+  box-shadow: 5px 5px 10px 2px #b8aeae;
 }
 h2 {
   font-size: 30px;
@@ -30,10 +31,11 @@ h2 {
   border-radius: 10px;
   margin-top: 20px;
   margin-bottom: 20px;
+  padding: 2px;
 }
 .card img {
-  border-top-left-radius: 50px;
-  border-top-right-radius: 50px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   border-image: 10px;
   width: 400px;
   height: auto;
@@ -42,6 +44,7 @@ h3 {
   font-size: 20px;
   background-color: #fffafa;
   text-align: center;
+  padding: 2px;
 }
 .container {
   width: 90vw;
@@ -54,9 +57,13 @@ h3 {
 button {
   text-align: center;
   font-size: 20px;
-  border-radius: 5px;
   background-color: #efd7d9;
   border-color: #efd7d9;
-  margin:auto;
-  display:block;
+  margin: auto;
+  display: block;
+  padding: 10px;
+  border-radius: 4px;
+}
+a {
+  text-decoration: none;
 }
