--- a/index.css
+++ b/index.css
@@ -69,13 +69,13 @@ a {
 }
 
 .cart {
-  margin-top: 10px;
+  margin-top: 100px;
+  margin-left: 200px;
   background-color: #fffafa;
-  width: 400px;
-  height: 750px;
-  position: absolute;
+  width: 1000px;
+  height: 500px;
   right: 0;
-  margin-right: auto;
-  display: flex;
-  flex-direction: column;
+  margin: auto;
+  margin-bottom: 50px;
+  box-shadow: 5px 5px 10px 2px #b8aeae;
 }
