--- a/index.css
+++ b/index.css
@@ -111,9 +111,14 @@ a {
 }
 .filter-item {
   font-size: 30px;
-  margin-left: 130px;
+  margin-left: 90px;
   margin-top: 10px;
   background-color: #d2c6c6;
   align-self: center;
   border-radius: 5px;
+  border-color: #d2c6c6;
+  border: 1px solid #d2c6c6;
+  border-radius: 4px;
+  height: 50px;
+  width: 140px;
 }
